# component

./: CMakeLists.txt  Kconfig.projbuild  README.md  sdkconfig.mesh_defaults
inc/: rd_ble_mesh.h  sdk_def.h  util.h
inc/common/: dev_common.h
inc/gcool/: gcool.h  gcool_def.h
inc/peripheral/: rd_gpio.h  rd_uart.h
inc/switch/: button.h  button_mgmt.h  lc8823.h  led_mgmt.h  relay_mgmt.h
src/: rd_ble_mesh.c  util.c
src/common/: dev_common.c
src/gcool/: gcool.c  gcool_product.c
src/peripheral/: rd_gpio.c  rd_uart.c
src/switch/: button.c  button_mgmt.c  lc8823.c  led_mgmt.c  relay_mgmt.c
